<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gris"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="80dp"
        android:paddingBottom="40dp">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView3"
            android:layout_width="148dp"
            android:layout_height="117dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/_4" />


        <TextView
            android:id="@+id/txt_name_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/Nombre"
            android:textColor="@color/Rosa"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/Descripcion_login"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/txt_name_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/Nombre"
            app:layout_constraintTop_toBottomOf="@id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/miText"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/user" />


        <EditText
            android:id="@+id/miText"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/textView4"
            app:layout_constraintStart_toEndOf="@id/imageView4"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView5"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/Password"
            app:layout_constraintTop_toBottomOf="@id/miText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/miText2"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/llave" />


        <EditText
            android:id="@+id/miText2"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@color/white"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:imeOptions="actionDone"
            app:layout_constraintTop_toBottomOf="@id/miText"
            app:layout_constraintStart_toEndOf="@id/imageView5"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/btnStart"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/Rosa"
            android:text="@string/Button_Ingresar"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/miText2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/Recupera"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/btnStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView6"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/Google"
            app:layout_constraintTop_toBottomOf="@id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/google" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="center"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:hint="@string/Google"
            app:layout_constraintTop_toBottomOf="@id/textView3"
            app:layout_constraintStart_toEndOf="@id/imageView6"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Sin_cuenta"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registrate"
            android:textColor="@color/Blue"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/textView5"
            app:layout_constraintStart_toEndOf="@id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
