<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gris"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="230dp"
            android:layout_height="232dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/_4" />

        <TextView
            android:id="@+id/txt_name_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nombre"
            android:textColor="@color/Rosa"
            android:textSize="35sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/imageView8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/passwordlost"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/txt_name_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="329dp"
            android:layout_height="47dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/RegisterEmail"
            android:textColor="@color/black"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/Rosa"
            android:text="@string/passwordlosttwo"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/editTextText4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
